# CIVITAS-Acquisition

./: .gitignore  Makefile  README.md  pyproject.toml
src/civitas_acquisition/: __init__.py
src/civitas_acquisition/bootstrap/: container.py
src/civitas_acquisition/channels/: polling_channel.py
src/civitas_acquisition/config/: loader.py
src/civitas_acquisition/connectors/: _base.py
src/civitas_acquisition/contracts/: __init__.py
src/civitas_acquisition/domain/: __init__.py  acquisition_job.py  acquisition_session.py
src/civitas_acquisition/policies/: backpressure.py  retry_policy.py
src/civitas_acquisition/processing/: acquisition_processor.py
src/civitas_acquisition/registry/: connector_registry.py
src/civitas_acquisition/storage/: local.py
src/civitas_acquisition/workers/: dispatcher.py  worker_pool.py
tests/: conftest.py
tests/connectors/confluence/: test_confluence.py
tests/connectors/github/: conftest.py  test_auth.py  test_auth_v2.py  test_client_graphql.py  test_connector.py  test_mapper.py  test_operations.py  test_webhook.py  test_webhook_manager.py
tests/connectors/gmail/: test_gmail.py
tests/connectors/notion/: conftest.py  test_notion.py
tests/connectors/postgres/: test_postgres.py
tests/connectors/slack/: test_slack.py
tests/contracts/: test_acquisition_job.py  test_connector_manifest.py  test_raw_document.py
tests/integration/: test_processor_end_to_end.py
tests/processing/: test_deduplicator.py  test_validator.py
tests/registry/: test_connector_registry.py
tests/runtime/: test_event_bus.py  test_resilience.py
(+67 files in other folders)
